# MagicToonEngine

./: .gitattributes  .lfsconfig  Build.bat  CMakeLists.txt  CMakePresets.json  GenerateVSProject.bat  LICENSE  README.md  Setup.bat  ThirdPartyNotices.md  ThirdPartyNotices.txt  VERSION  download_lfs.bat  update.bat
Engine/Source/Core/Core/: CMakeLists.txt
Engine/Source/Core/Core/Internal/: SubsystemContextImpl.h
Engine/Source/Core/Core/Private/: Core.cpp
Engine/Source/Core/Core/Public/: Core.h
Engine/Source/Core/RenderCore/: CMakeLists.txt
Engine/Source/Core/RenderCore/Internal/: BufferManager.h  BufferManager.inl  BufferManagerImpl.h  RenderCore.h
Engine/Source/Core/RenderCore/Private/: BufferManager.cpp  BufferManagerImpl.cpp  BufferManagerLoadTexture.cpp  RenderCore.cpp  RenderCoreImpl.cpp
Engine/Source/Core/RenderCore/Public/: BufferManagerI.h  IBufferManager.h  IRender.h  RenderContext.h  RenderInterface.h
Engine/Source/Editor/AssetPipeline/: CMakeLists.txt
Engine/Source/Editor/AssetPipeline/Internal/: Asset.h
Engine/Source/Editor/AssetPipeline/Private/: Asset.cpp
Engine/Source/Editor/AssetPipeline/Public/: AssetPipeline.h
Engine/Source/Editor/Editor/: CMakeLists.txt
Engine/Source/Editor/Editor/Internal/: EditorRender.h  Win32Application.h  WindowsConfig.h
Engine/Source/Editor/Editor/Private/: Editor.cpp  Tick.cpp
Engine/Source/Editor/Editor/Public/: Editor.h
Engine/Source/Editor/EditorCore/: CMakeLists.txt
Engine/Source/Editor/EditorWindows/: CMakeLists.txt
Engine/Source/Editor/EditorWindows/Internal/: WindowsConfig.h
Engine/Source/Editor/EditorWindows/Private/: CreateContext.cpp  Editor.cpp  EditorWindows.cpp  WindowsEvent.cpp
Engine/Source/Editor/EditorWindows/Public/: Editor.h  EditorWindows.h
Engine/Source/Editor/EngineAsset/: CMakeLists.txt
Engine/Source/Editor/EngineAsset/Private/: FBXImport.cpp
Engine/Source/Editor/EngineAsset/Public/: FBXImport.h
Engine/Source/Editor/EngineProject/: CMakeLists.txt
Engine/Source/Editor/EngineProject/Internal/: ProjectControllerImpl.h  ProjectPathImpl.h  ThirdParty.h
Engine/Source/Editor/EngineProject/Private/: ProjectControllerImpl.cpp  ProjectPathImpl.cpp
Engine/Source/Editor/EngineProject/Public/: IProjectController.h  IProjectPath.h
Engine/Source/Editor/EngineScene/: CMakeLists.txt
Engine/Source/Editor/EngineScene/Internal/: Scene.h
Engine/Source/Editor/EngineScene/Private/: FBXImport.cpp  Scene.cpp
Engine/Source/Editor/EngineScene/Public/: FBXImport.h
Engine/Source/Editor/IO/: CMakeLists.txt
Engine/Source/Editor/IO/Private/: AbsolutePath.cpp  Converter.cpp  FileManager.cpp
Engine/Source/Editor/IO/Public/: AbsolutePath.h  Converter.h  FileManager.h
Engine/Source/Editor/Logger/: CMakeLists.txt
Engine/Source/Editor/Logger/Internal/: Logger.h
Engine/Source/Editor/Logger/Private/: Logger.cpp  Logger.h
Engine/Source/Editor/Logger/Public/: Log.h
Engine/Source/Editor/MagicEditor/: CMakeLists.txt
Engine/Source/Editor/MagicEditor/Internal/: Common.h  Main.h
Engine/Source/Editor/MagicEditor/Private/: EnginePreprocessing.cpp  Main.cpp
Engine/Source/Editor/MagicEditor/Src/: EnginePreInit.cpp  Main.cpp  Main.h
Engine/Source/Editor/MagicEditor/Test/: test.h  test1.h
Engine/Source/Editor/MagicLauncher/: CMakeLists.txt
Engine/Source/Editor/MagicLauncher/Internal/: Win32Application.h
Engine/Source/Editor/MagicLauncher/Private/: Main.cpp
Engine/Source/Editor/MagicLauncher/Public/: Main.h
Engine/Source/Editor/RenderEditor/: CMakeLists.txt
Engine/Source/Editor/RuntimeAssets/: CMakeLists.txt
Engine/Source/Editor/RuntimeAssets/Internal/: Scene.h
Engine/Source/Editor/RuntimeAssets/Private/: FBXImport.cpp  Scene.cpp
Engine/Source/Editor/RuntimeAssets/Public/: FBXImport.h
Engine/Source/Launcher/: CMakeLists.txt  Main.cpp
Engine/Source/Launcher/EngineLauncher/: CMakeLists.txt  Main.cpp  test.h
Engine/Source/Launcher/EngineLauncher/Internal/: LauncherRender.h  Win32Application.h
Engine/Source/Launcher/EngineLauncher/Private/: Main.cpp  Tick.cpp
Engine/Source/Launcher/EngineLauncher/Public/: Main.h
Engine/Source/Launcher/EngineLauncher/Src/: EnginePreInit.cpp  Main.cpp
Engine/Source/Launcher/EngineLauncher/Test/: test.h
Engine/Source/Launcher/EngineLauncher/src/: app.cpp  event.cpp
Engine/Source/Launcher/MagicEditor/: CMakeLists.txt
Engine/Source/Launcher/MagicEditor/Src/: EnginePreInit.cpp  Main.cpp
Engine/Source/Launcher/ProjectLauncher/: CMakeLists.txt
Engine/Source/Launcher/ProjectLauncher/src/: Main.cpp  Main.h  app.cpp  event.cpp  server.cpp
Engine/Source/Programs/MagicBuildTool/: CMakeLists.txt
Engine/Source/Programs/MagicBuildTool/Internal/: BuildPipeline.h  Logger.h  MagicBuildTool.h
Engine/Source/Programs/MagicBuildTool/Private/: IO.cpp  MagicBuildTool.cpp  Main.cpp
Engine/Source/Programs/MagicBuildTool/Public/: MagicBuildTool.h
Engine/Source/Programs/MagicHeaderTool/: CMakeLists.txt
Engine/Source/Programs/MagicHeaderTool/Internal/: BuildPipeline.h  MagicHeaderTool.h
Engine/Source/Programs/MagicHeaderTool/Private/: MagicHeaderTool.cpp  Main.cpp
Engine/Source/Render/Render/: CMakeLists.txt
Engine/Source/Render/RenderLauncher/: CMakeLists.txt
Engine/Source/Render/RenderLauncher/Internal/: LauncherGeneralLayout.h
Engine/Source/Render/RenderLauncher/Private/: GUI_LauncherGeneralLayout.cpp  GUI_LauncherNewProject.cpp  GUI_LauncherOpenProject.cpp  Subsystem_LauncherGeneralLayout.cpp
Engine/Source/Render/RenderRT/: CMakeLists.txt
Engine/Source/Render/RenderRT/Internal/: RenderRT.h  RenderRTImpl.h
Engine/Source/Render/RenderRT/Private/: RenderRT.cpp  RenderRTImpl.cpp
Engine/Source/Render/RenderRT/Public/: IRenderRT.h  RenderRTInterface.h
Engine/Source/Render/RenderUI/: CMakeLists.txt
Engine/Source/Render/RenderUI/Internal/: DrawToolsWindows.h  EditorUIComponentSwitch.h  EditorUIWarehouse.h  GuiComponentSwitch.h  GuiInterface.h  MagicUIContext.h
Engine/Source/Render/RenderUI/Private/: BasicLayout.cpp  EditorInterface.cpp  EditorUI.cpp  MagicUIBindLua.cpp  MagicUIContext.cpp  RenderUI.cpp
(+330 files in other folders)
